AKS-Session/ingress/aks-deploy-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  bcapp-ingress-be
  namespace: ingress-basic
  labels:
    app: microservice-ingress
    tier: backend
    type: k8s-deploy
spec:
  selector:
    matchLabels:
      app: microservice-ingress
      author: MSA
      type: k8s-ingress-be
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: microservice-ingress
        author: MSA
        type: k8s-ingress-be
    spec:
      containers:
      - name: bc-ingress-be
        image: azacrmldev.azurecr.io/microservices:be
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 5000
          name:  flask-app
---

apiVersion: v1
kind: Service
metadata:
  name: bcapp-ingress-ci-be
  namespace: ingress-basic
  labels:
    app: microservice-ingress
    author: MSA
    tier: be-service
    type: k8s-ingress-ci
spec:
  selector:
    app: microservice-ingress
    author: MSA
    type: k8s-ingress-be
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - port: 80
    targetPort: 5000
