AKS-Session/ingress/aks-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inress-micro
  namespace: ingress-basic
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName : nginx
  # defaultBackend :
  #   service:
  #     name : bcapp-ingress-ci-fe
  #     port:
  #       number: 80
  rules:
     - host: "k8s.iamsohail.ml"
       http:
        paths:
        - path: /frontend
          pathType: Prefix
          backend:
            service:
              name: bcapp-ingress-ci-fe
              port:
                number: 80

        - path: /
          pathType: Prefix
          backend:
            service:
              name: bcapp-ingress-ci-be
              port:
                number: 80
